name:          backend
version:       0.1
cabal-version: >=1.8
build-type:    Simple

library
  hs-source-dirs:     src

  if impl(ghcjs)
    buildable: False

  build-depends:
      aeson
    , aeson-gadt-th
    , base
    , beam-core
    , beam-postgres
    , bytestring
    , common
    , constraints-extras
    , containers
    , dependent-sum
    , dependent-sum-template
    , exceptions
    , frontend
    , gargoyle-postgresql-connect
    , lens
    , mtl
    , obelisk-backend
    , obelisk-route
    , postgresql-simple
    , psql-simple-beam
    , psql-simple-class
    , reflex
    , resource-pool
    , rhyolite-account-backend
    , rhyolite-backend
    , rhyolite-beam-db
    , rhyolite-beam-orphans
    , rhyolite-common
    , rhyolite-notify-listen
    , rhyolite-notify-listen-beam
    , safe-exceptions
    , snap-core
    , text
    , time
    , witherable

  exposed-modules:    Backend
  other-modules:
    Backend.NotifyHandler
    Backend.RequestHandler
    Backend.Schema
    Backend.Transaction
    Backend.ViewSelectorHandler

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveFoldable
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    EmptyDataDecls
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies

  ghc-options:        -Wall

executable backend
  main-is:        main.hs
  hs-source-dirs: src-bin

  if impl(ghcjs)
    buildable: False

  build-depends:
      backend
    , base
    , common
    , frontend
    , obelisk-backend

  ghc-options:    -threaded
