name:          backend
version:       0.1
cabal-version: >=1.8
build-type:    Simple

library
  hs-source-dirs:     src

  if impl(ghcjs)
    buildable: False

  build-depends:
      aeson
    , aeson-gadt-th
    , barbies
    , base
    , beam-core
    , beam-migrate
    , beam-postgres
    , bytestring
    , cassava
    , common
    , constraints-extras
    , containers
    , dependent-sum
    , dependent-sum-template
    , exceptions
    , frontend
    , gargoyle-postgresql-connect
    , lens
    , monoidal-containers
    , mtl
    , obelisk-backend
    , obelisk-route
    , patch
    , postgresql-simple
    , psql-simple-beam
    , psql-simple-class
    , reflex
    , resource-pool
    , rhyolite-account-backend
    , rhyolite-backend
    , rhyolite-beam-db
    , rhyolite-beam-orphans
    , rhyolite-common
    , rhyolite-notify-listen
    , rhyolite-notify-listen-beam
    , safe-exceptions
    , snap-core
    , tagged
    , text
    , time
    , unordered-containers
    , vector
    , vessel
    , vinyl
    , witherable

  exposed-modules:
    Backend
    Backend.KeplerConversion
    Backend.NotifyHandler
    Backend.Orphans
    Backend.Query.Beam.Internal.Parcels
    Backend.Query.Beam.Internal.SOI
    Backend.Query.Beam.Internal.Tiger
    Backend.Query.Beam.Internal.WindTurbine
    Backend.Query.Beam.Parcels
    Backend.Query.Beam.SOI
    Backend.Query.Beam.Tiger
    Backend.Query.Beam.WindTurbine
    Backend.Query.Postgis.DSL
    Backend.RequestHandler
    Backend.Schema
    Backend.Transaction
    Backend.ViewSelectorHandler

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveFoldable
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    EmptyDataDecls
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies

  ghc-options:        -Wall

executable backend
  main-is:        main.hs
  hs-source-dirs: src-bin

  if impl(ghcjs)
    buildable: False

  build-depends:
      backend
    , base
    , common
    , frontend
    , obelisk-backend

  ghc-options:    -threaded
