name:          common
version:       0.1
cabal-version: >=1.2
build-type:    Simple

library
  hs-source-dirs:     src
  build-depends:
      adjunctions
    , aeson
    , aeson-gadt-th
    , attoparsec
    , base
    , beam-core
    , constraints
    , constraints-extras
    , containers
    , dependent-map
    , dependent-sum
    , dependent-sum-template
    , lens
    , monoidal-containers
    , mtl
    , obelisk-route
    , reflex
    , rhyolite-account-types
    , rhyolite-common
    , semialign
    , signed-data
    , signed-data-clientsession
    , text
    , text-short
    , these
    , time
    , universe
    , witherable

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveFoldable
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    EmptyDataDecls
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies

  exposed-modules:
    Common.App
    Common.Route
    Common.Schema

  ghc-options:        -Wall
