name:          common
version:       0.1
cabal-version: >=1.2
build-type:    Simple

library
  hs-source-dirs:     src
  build-depends:
      adjunctions
    , aeson
    , aeson-gadt-th
    , attoparsec
    , base
    , beam-core
    , bytestring
    , cassava
    , constraints
    , constraints-extras
    , containers
    , deepseq
    , dependent-map
    , dependent-sum
    , dependent-sum-template
    , lens
    , monoidal-containers
    , mtl
    , obelisk-route
    , patch
    , postgresql-simple
    , reflex
    , rhyolite-account-types
    , rhyolite-common
    , semialign
    , signed-data
    , signed-data-clientsession
    , singletons
    , tagged
    , text
    , text-short
    , these
    , time
    , universe
    , vector
    , vessel
    , witherable

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveFoldable
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    EmptyDataDecls
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies

  exposed-modules:
    Common.App
    Common.App.PostGIS
    Common.Model.PGS.CAMA
    Common.Model.PGS.SOI
    Common.Model.PGS.Tiger
    Common.Model.PGS.WindTurbine
    Common.Model.Postgis.DSL
    Common.Model.Postgis.KnownDatasets
    Common.Route
    Common.Schema

  ghc-options:        -Wall
