name:          common
version:       0.1
cabal-version: >=1.2
build-type:    Simple

library
  hs-source-dirs:     src
  build-depends:
      adjunctions
    , aeson
    , aeson-gadt-th
    , attoparsec
    , barbies
    , base
    , beam-core
    , bytestring
    , constraints
    , constraints-extras
    , containers
    , deepseq
    , dependent-map
    , dependent-sum
    , dependent-sum-template
    , lens
    , monoid-statistics
    , monoidal-containers
    , mtl
    , obelisk-route
    , patch
    , reflex
    , rhyolite-account-types
    , rhyolite-common
    , scientific
    , semialign
    , signed-data
    , singletons
    , tagged
    , text
    , text-short
    , these
    , time
    , universe
    , unordered-containers
    , vector
    , vessel
    , vinyl
    , witherable

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveFoldable
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    EmptyDataDecls
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies

  exposed-modules:
    Common.App
    Common.App.PostGIS
    Common.Model.Beam.Database
    Common.Model.Beam.Expressions.GeoJSON
    Common.Model.Beam.Parcels
    Common.Model.Beam.SOI
    Common.Model.Beam.Tiger
    Common.Model.Beam.WindTurbine
    Common.Model.KeplerSpec
    Common.Model.Postgis.DSL
    Common.Model.Postgis.KnownDatasets
    Common.Orphans
    Common.Route
    Common.Schema
    Common.Statistics.Monoid

  ghc-options:        -Wall
