name:          frontend
version:       0.1
cabal-version: >=1.8
build-type:    Simple

library
  hs-source-dirs:     src
  build-depends:
      aeson
    , barbies
    , base
    , beam-core
    , bytestring
    , common
    , containers
    , dependent-sum
    , exceptions
    , ghcjs-dom
    , jsaddle
    , jsaddle-dom
    , lens
    , MonadRandom
    , monoid-statistics
    , monoidal-containers
    , obelisk-executable-config-lookup
    , obelisk-frontend
    , obelisk-generated-static
    , obelisk-route
    , random
    , reflex
    , reflex-dom-core
    , rhyolite-common
    , rhyolite-frontend
    , rhyolite-widgets
    , some
    , tagged
    , text
    , time
    , universe
    , universe-some
    , vector
    , vessel
    , vinyl

  -- , react
  -- , reflex-react
  exposed-modules:
    Frontend
    Frontend.Map
    Frontend.Map.Kepler.DSL
    Frontend.Map.Kepler.SummaryStats
    Frontend.Navigation
    Frontend.Navigation.Routes
    Frontend.Navigation.Sidebar
    Frontend.SVG
    Frontend.View.PostGIS
    JSDOM.Kepler
    JSDOM.Kepler.Config
    Reflex.Common
    Reflex.Kepler

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveFoldable
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    EmptyDataDecls
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies

  ghc-options:        -Wall

executable frontend
  main-is:        main.hs
  hs-source-dirs: src-bin
  build-depends:
      base
    , common
    , frontend
    , obelisk-frontend
    , obelisk-route
    , reflex-dom

  --TODO: Make these ghc-options optional
  ghc-options:    -threaded

  if os(osx)
    ghc-options: -dynamic
